# play_with_tflite

./: .gitignore  .gitmodules  README.md
ViewAndroid/: build.gradle  settings.gradle
ViewAndroid/app/: build.gradle  local.properties
ViewAndroid/app/src/main/: AndroidManifest.xml
ViewAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ViewAndroid/app/src/main/java/com/iwatake/viewandroidtflite/: MainActivity.java
ViewAndroid/gradle/wrapper/: gradle-wrapper.properties
_pj_tflite_depth_fast_depth/image_processor/: depth_engine.cpp
pj_tflite_camera_deep_calib/image_processor/: camera_calibration_engine.cpp
pj_tflite_depth_midas/image_processor/: depth_engine.cpp
pj_tflite_det_efficientdet_lite/image_processor/: detection_engine.cpp
pj_tflite_det_fastestdet/image_processor/: detection_engine.cpp
pj_tflite_det_mobilenetssd_v1/image_processor/: detection_engine.cpp
pj_tflite_det_nanodet/image_processor/: detection_engine.cpp
pj_tflite_det_yolov5/image_processor/: detection_engine.cpp
pj_tflite_edge_dexined/image_processor/: edge_engine.cpp
pj_tflite_face_age-gender-recognition/image_processor/: age_gender_engine.cpp
pj_tflite_face_blazeface/image_processor/: face_detection_engine.cpp
pj_tflite_face_dbface/image_processor/: face_detection_engine.cpp
pj_tflite_face_facemesh/image_processor/: facemesh_engine.cpp
pj_tflite_face_head-pose-WHENet/image_processor/: headpose_engine.cpp
pj_tflite_face_landmark_with_attention/image_processor/: face_detection_engine.cpp  facemesh_engine.cpp
pj_tflite_lane_lanenet-lane-detection/image_processor/: lane_engine.cpp
pj_tflite_lane_ultra-fast-lane-detection/image_processor/: lane_engine.cpp
pj_tflite_other_film/image_processor/: frame_interpolation_engine.cpp
pj_tflite_perception_hybrid_nets/image_processor/: detection_engine.cpp
pj_tflite_person-attributes-recognition-crossroad-0230/image_processor/: feature_engine.cpp
pj_tflite_pose_centernet_tf_kpts/image_processor/: pose_engine.cpp
pj_tflite_pose_movenet_multi/image_processor/: pose_engine.cpp
pj_tflite_seg_paddleseg_cityscapessota/image_processor/: segmentation_engine.cpp
pj_tflite_seg_robust_video_matting/image_processor/: segmentation_engine.cpp
pj_tflite_seg_topformer/image_processor/: segmentation_engine.cpp
pj_tflite_ss_road-segmentation-adas-0001/image_processor/: semantic_segmentation_engine.cpp
pj_tflite_track_deepsort/image_processor/: detection_engine.cpp  feature_engine.cpp
pj_tflite_track_deepsort_person-reidentification/image_processor/: feature_engine.cpp
